[project]
name = "fastapi-mcp-sse"
version = "0.1.0"
description = "A working example to create a FastAPI server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blockfrost-python>=0.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pycardano>=0.14.0",
    "python-dotenv>=1.0.1",
    "unicorn>=2.1.3",
]

[project.scripts]
start = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
